--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
                     <article class="bio">
                         <h2>Jay’s Biography</h2>
+                        <span class="hpattern"><img src="img/hpattern.png" alt=""></span>
                         <p>Jay began his career in the insurance industry in 1978. His first 14 years was split between Sentry Insurance and The Hartford where he was rated the #1 Production Underwriter in the country several years in succession.</p>
                         <p>In 1995 Jay was hired by a large independent agency (60 employees) as their Program Manager. By 2001 Jay had built 6 very successful programs that were a key factor in annual double-digit growth for that agency.</p>
                         <p>From 2001 until 2007 Jay was Vice-President of Sales and Marketing for the agency that he helped guide to become the largest agency in Western Michigan with an employee count of over 120. Following the sale of this agency Jay became Vice President of Sales for its parent company of 250+ employees until 2012. During this time period Jay was recruited by 7 insurance companies to participate on their respective advisory councils in order to assist growth for both carriers and agency.</p>
@@ -52,6 +53,7 @@
 
                     <article class="network">
                         <h2>Network</h2>
+                        <span class="hpattern"><img src="img/hpattern.png" alt=""></span>
                         <p></p>
 
                     </article>
