--- a/index.html
+++ b/index.html
@@ -55,46 +55,46 @@
                         <h2>Network</h2>
                         <span class="hpattern"><img src="img/hpattern.png" alt=""></span>
                     </article>
-                    
-                    <div class="gg">
+
+                    <div class="n_contain">
                         <ul class="network">
                             <li>
-                                <div class="n_logo"><img src="http://placeimg.com/360/180/tech" alt="Turn-Key Mergers & Acquisitions"></div>
+                                <div class="n_logo"><img src="img/tkma_logo.png" alt="Turn-Key Mergers & Acquisitions"></div>
                                 <div class="n_copy">
                                     <h3>Turn-Key Mergers & Acquisitions</h3>
                                     <p>A full-service specialty group, is an industry leader in executing business ownership transitions to the next generation, employees, or outside parties.</p>
                                 </div>
                             </li>
                             <li>
-                                <div class="n_logo"><img src="http://placeimg.com/360/180/tech" alt="Expert Tech"></div>
+                                <div class="n_logo"><img src="img/extech.jpg" alt="Expert Tech"></div>
                                 <div class="n_copy">
                                     <h3>Expert Tech</h3>
                                     <p>An employee development and training company focused on rebuilding our skilled workforce to ensure that you have the talented, dependable professionally trained team members you need to grow your business.</p>
                                 </div>
                             </li>
                             <li>
-                                <div class="n_logo"><img src="http://placeimg.com/360/180/tech" alt="Lipsum"></div>
+                                <div class="n_logo"><img src="http://placeimg.com/400/180/tech" alt="Lipsum"></div>
                                 <div class="n_copy">
                                     <h3>Lorem Ipsum</h3>
                                     <p>Ac interdum turpis. Aenean non placerat purus. Suspendisse egestas ante quam, eu pretium purus porta in. Ut vel odio enim. Donec vel pretium libero.</p>
                                 </div>
                             </li>
                             <li>
-                                <div class="n_logo"><img src="http://placeimg.com/360/180/tech" alt="Turn-Key Mergers & Acquisitions"></div>
+                                <div class="n_logo"><img src="http://placeimg.com/400/180/tech" alt="Turn-Key Mergers & Acquisitions"></div>
                                 <div class="n_copy">
                                     <h3>Turn-Key Mergers & Acquisitions</h3>
                                     <p>A full-service specialty group, is an industry leader in executing business ownership transitions to the next generation, employees, or outside parties.</p>
                                 </div>
                             </li>
                             <li>
-                                <div class="n_logo"><img src="http://placeimg.com/360/180/tech" alt="Expert Tech"></div>
+                                <div class="n_logo"><img src="http://placeimg.com/400/180/tech" alt="Expert Tech"></div>
                                 <div class="n_copy">
                                     <h3>Expert Tech</h3>
                                     <p>An employee development and training company focused on rebuilding our skilled workforce to ensure that you have the talented, dependable professionally trained team members you need to grow your business.</p>
                                 </div>
                             </li>
                             <li>
-                                <div class="n_logo"><img src="http://placeimg.com/360/180/tech" alt="Lipsum"></div>
+                                <div class="n_logo"><img src="http://placeimg.com/400/180/tech" alt="Lipsum"></div>
                                 <div class="n_copy">
                                     <h3>Lorem Ipsum</h3>
                                     <p>Ac interdum turpis. Aenean non placerat purus. Suspendisse egestas ante quam, eu pretium purus porta in. Ut vel odio enim. Donec vel pretium libero.</p>
