--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
         <div class="container" id="top">
             <header class="head">
-                <div class="logo"><img src="img/logo.png" alt="JJ Fagan & Co"></div>
+                <div class="logo">
+                    <a href="#"><img src="img/logo.png" alt="JJ Fagan & Co"></a>
+                </div>
                 <nav class="menu">
                     <ul>
                         <li><a href="#myBio">Bio</a></li>
@@ -121,8 +123,9 @@
  
             <footer id="contactMe" class="contact">
                 <h3>Contact</h3>
-                <p>123-456-7890</p>    
-                <p>email@me.com</p>             
+                <p>616-901-0394</p>    
+                <p>jay@jjfaganandcompany.com</p>    
+                <p>&copy 2014 <a href ="#">J.J. Fagan & Co., LLC.</a> All rights reserved.</p>         
 
             </footer>
 
