--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <h3>Contact</h3>
                 <p>616-901-0394</p>    
                 <p>jay@jjfaganandcompany.com</p>    
-                <p>&copy 2014 <a href ="#">J.J. Fagan & Co., LLC.</a> All rights reserved.</p>         
+                <p>&copy; 2014 <a href ="#">J.J. Fagan & Co., LLC.</a> All rights reserved.</p>         
 
             </footer>
 
