--- a/index.html
+++ b/index.html
@@ -122,10 +122,14 @@
  
  
             <footer id="contactMe" class="contact">
-                <h3>Contact</h3>
-                <p>616-901-0394</p>    
-                <p>jay@jjfaganandcompany.com</p>    
-                <p>&copy; 2014 <a href ="#">J.J. Fagan & Co., LLC.</a> All rights reserved.</p>         
+
+                <article class="contact_box">
+                    <h2>Contact</h2>
+                    <span class="hpattern"><img src="img/hpattern.png" alt=""></span>
+                    <p>616-901-0394</p>    
+                    <p>jay@jjfaganandcompany.com</p>    
+                    <p>&copy; 2014 <a href ="#">J.J. Fagan & Co., LLC.</a> All rights reserved.</p>    
+                </article>     
 
             </footer>
 
