--- a/index.html
+++ b/index.html
@@ -123,17 +123,24 @@
  
             <footer id="contactMe" class="contact">
 
-                <article class="contact_box">
+                <article>
                     <h2>Contact</h2>
                     <span class="hpattern"><img src="img/hpattern.png" alt=""></span>
+                </article>    
+
+                <article class="contact_box">    
+                    <p>For all inquiries:</p>
                     <p>616-901-0394</p>    
                     <p>jay@jjfaganandcompany.com</p>    
-                    <p>&copy; 2014 <a href ="#">J.J. Fagan & Co., LLC.</a> All rights reserved.</p>    
+                     
                 </article>     
+
+                <p class="copyright">&copy; 2014 Copyright - <a href ="#">J.J. Fagan & Co., LLC.</a></p>   
 
             </footer>
 
         </div>
+        
 
 
 
