--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 
                 <article class="contact_box">    
                     <p>For all inquiries:</p>
-                    <p>616-901-0394</p>    
-                    <p>jay@jjfaganandcompany.com</p>    
+                    <p class="phone"><img src="img/phone.svg" alt="Phone: ">616-901-0394</p>    
+                    <p class="email"><img src="img/email.svg" alt="Email: "><a href="mailto:jay@jjfaganandcompany.com">jay@jjfaganandcompany.com</a></p>    
                      
                 </article>     
 
