--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                 <article class="contact_box">    
                     <p>For all inquiries:</p>
-                    <p class="phone"><img src="img/phone.svg" alt="Phone: ">616-901-0394</p>    
+                    <p class="phone"><img src="img/phone.svg" alt="Phone: "><a href="tel:6169010394">616-901-0394</a></p>    
                     <p class="email"><img src="img/email.svg" alt="Email: "><a href="mailto:jay@jjfaganandcompany.com">jay@jjfaganandcompany.com</a></p>    
                      
                 </article>     
