--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
             </footer>
             <p class="copyright">&copy; 2014 Copyright - <a href ="#">J.J. Fagan & Co., LLC.</a></p>   
 
+            <a class="goup" href="#top" style="opacity: 5.2325;"><img alt="Go Up" src="img/up_arrow.png"></a>
+
         </div>
 
 
