--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
                         <li><a href="#contactMe">Contact</a></li>
                     </ul>
                 </nav>
+
+                <div class="down"><a href="#site_intro">&#8679; <!--<img src="img/down-arrow.svg" alt="Let's Start">--></a></div>
+
             </header>
             <div class="contain">
                 <section class="main">
-                    <article class="intro">
+                    <article id="site_intro" class="intro">
                         <h1><span class="diff_color">A Lifetime of Success.</span>   Building Great Relationships.</h1>
                         <p>In my years in business I have made great friends and accrued many great business relationships. The fun begins with bringing these relationships together...and taking this networking to the next level.</p>
 
@@ -140,7 +143,7 @@
             </footer>
             <p class="copyright">&copy; 2014 Copyright - <a href ="#">J.J. Fagan & Co., LLC.</a></p>   
 
-            <a class="goup" href="#top" style="opacity: 5.2325;"><img alt="Go Up" src="img/up_arrow.png"></a>
+            <a class="goup" href="#top" style="opacity: 5.2325;"> &#8679; <!--<img alt="Go Up" src="img/up_arrow.png">--></a>
 
         </div>
 
