--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </footer>
             <p class="copyright">&copy; 2014 Copyright - <a href ="#">J.J. Fagan & Co., LLC.</a></p>   
 
-            <a class="goup" href="#top" style="opacity: 5.2325;"> &#8679; <!--<img alt="Go Up" src="img/up_arrow.png">--></a>
+            <a class="goup" href="#top" style="opacity: 5.2325;"> <p>&#8679; </p> <!--<img alt="Go Up" src="img/up_arrow.png">--></a>
 
         </div>
 
