--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <li>
                                 <div class="c_n">
                                     <div class="n_logo">
-                                        <a href="http://focal5.com/"><img src="img/tkma_logo.jpg" alt="Turn-Key Mergers & Acquisitions"></a>
+                                        <a href="http://focal5.com/" target="_blank"><img src="img/tkma_logo.jpg" alt="Turn-Key Mergers & Acquisitions"></a>
                                     </div>
                                     <div class="n_copy">
                                         <p>A full-service specialty group, an industry leader in executing business ownership transitions to the next generation, employees, or outside parties.</p>
@@ -79,7 +79,7 @@
                             <li>
                                 <div class="c_n">
                                     <div class="n_logo">
-                                        <a href="http://www.expert-technical.com/"><img src="img/extech.jpg" alt="Expert Tech"></a>
+                                        <a href="http://www.expert-technical.com/" target="_blank"><img src="img/extech.jpg" alt="Expert Tech"></a>
                                     </div>
                                     <div class="n_copy">
                                         <p>An employee development and training company focused on rebuilding our skilled workforce to ensure that you have the talented, dependable professionally trained team members you need to grow your business.</p>
@@ -89,7 +89,7 @@
                             <li>
                                 <div class="c_n">
                                     <div class="n_logo">
-                                        <a href="http://www.bhsins.com/"><img src="img/bhs_logo.jpg" alt="Berends Hendricks Stuit"></a>
+                                        <a href="http://www.bhsins.com/" target="_blank"><img src="img/bhs_logo.jpg" alt="Berends Hendricks Stuit"></a>
                                     </div>
                                     <div class="n_copy">
                                         <p>One of the largest full-service, independently owned insurance agencies in the Midwest. Founded in 1939, BHS has a history of providing superior service and managing insurance so that you don’t have to worry. </p>
@@ -100,7 +100,7 @@
                             <li>
                                 <div class="c_n">
                                     <div class="n_logo">
-                                        <a href="http://robbinsgroup.com/"><img src="img/robbins_logo.jpg" alt="Robbins Group"></a>
+                                        <a href="http://robbinsgroup.com/" target="_blank"><img src="img/robbins_logo.jpg" alt="Robbins Group"></a>
                                     </div>
                                     <div class="n_copy">
                                         <p>Specializing in property, casualty and workers’ compensation coverages, overall risk management plan design, payroll services, employee relations, regulatory compliance, personal insurance, and insured health, dental, vision, life and disability programs.</p>
@@ -111,7 +111,7 @@
                             <li>
                                 <div class="c_n">
                                     <div class="n_logo">
-                                        <a href="http://lambrixdesign.com/"><img src="img/lambrix_logo.jpg" alt="Lambrix Design"></a>
+                                        <a href="http://lambrixdesign.com/" target="_blank"><img src="img/lambrix_logo.jpg" alt="Lambrix Design"></a>
                                     </div>
                                     <div class="n_copy">
                                         <p>A boutique marketing and graphic design studio founded in 1991. We bring an eclectic combination of creativity to every job we produce. We work with one common goal in mind - to provide successful, innovative design solutions with personalized service, dedication and acute attention to detail.</p>
